# mspri1-2

./: .env  Cargo.toml  README.md
address/: .env  Cargo.toml  Dockerfile  docker-compose.yml
address/api/: Cargo.toml
address/api/src/: lib.rs
address/entities/: Cargo.toml
address/entities/src/: address.rs  lib.rs  prelude.rs
address/migration/: Cargo.toml
address/migration/src/: m20220101_000001_create_table.rs
address/src/: main.rs
migration/src/: m20220101_000001_create_table.rs
produits/: Cargo.toml  Dockerfile
produits/src/: main.rs
